# cpp-snippets

./: CMakeLists.txt  LICENSE
src/: check_if_member_function_exists.cpp  function_template_partial_specialization.cpp  std_algorithm.cpp  virtual_function_call_benchmark.cpp
